--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,6 @@
     margin-left: auto;
     margin-right: auto;
     padding: 15px 0px 0px 0px ;
-   
-
-   
-
     
 }
 
@@ -24,25 +20,16 @@
     display: flex;
     justify-content: space-between;
     align-content: center;
-
-
 }
-
 
 .doublediv{
     width:1100px ;
     height: 800px;
-    background-color: violet;
+    background-color:white;
     margin-left: auto;
     margin-right: auto;
     display: flex;
     justify-content: space-evenly;
-   
-
-   
-
-
-
 }
 
 
@@ -58,7 +45,7 @@
 .rightdiv{
     width: 380px ;
     height:390px ;
-    background-color: slateblue;
+    background-color: white;
     margin-top: 120px;
 
 } 
@@ -110,19 +97,15 @@
     background-color:rgb(178, 34, 123)
     
 
-    
-
 }
 
 .bask img{
     width: 50px;
     height: 50px;
-    /* background-image: url('/home/sandrabest/source/swe-class/html/newecommerce/image/icon-cart.svg'); */
     background-image: url('/image/icon-cart.svg');
     border-radius: 10px;
     margin-left: auto;
     margin-right: auto;
-    
 
 }
 
@@ -232,7 +215,7 @@
 .divone p{
     width: 380;
     height: 20px;
-    color:orange;
+    color:hsl(26, 100%, 55%);
     font-size: 15px;
     font-weight: bolder;
     font-family: Arial, Helvetica, sans-serif;
@@ -271,23 +254,40 @@
 
 }
 .divfour{
-    width: 200px;
-    height: 70px;
-    background-color: forestgreen;
+    width: 125px;
+    height: 65px;
+    background-color:hsl(0, 0%, 100%);
+    display: flex;
+    justify-content: space-between;
+    margin-right: 20px;
+
+}
+.divfive{
+    width:350px;
+    height:50px;
+    background-color:white;
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
 }
 
 .dollar{
-    width:100px ;
-    height: 65px;
-    background-color: aqua;
-    
+    width:75px ;
+    height: 50px;
+    background-color: white;
+    display: flex;
+    justify-content:start;
+    padding: 0px 0px -20px 0px;
+
 
 }
 .dollar p{
     color: black;
     font-size: 20px;
     font-weight: bold;
+    margin-top: 10px;
    
 
 }
@@ -299,9 +299,129 @@
     
 }
 .percentage{
-
+    width:40px ;
+    height:25px;
+    background-color:rgba(255, 166, 0, 0.192);
+    border-radius:5px ;
+    padding:0px 0px 0px -10px ;
+    margin-right: 10px; 
+    margin-top: 10px;
+   
 }
 
 .percentage p{
+    font-size: 15px;
+    font-weight: bold;
+    margin-top: 3px;
+    text-align: center;
+    color: hsl(26, 100%, 55%);  
+}
+.ato{
+    width: 150px;
+    height: 45px;
+    background-color:rgba(128, 128, 128, 0.123);
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.basket{
+    width:180px ;
+    height: 40px;px;
+    background-color:hsl(26, 100%, 55%);
+    border-radius: 5px;
+    margin-right:10px;
+    display: flex;
+    justify-content: space-around;
+    align-items: 
+}
+.basket1{
+    width:20px ;
+    height: 20px;
+    background-color: blue;
+    margin-right:30px;
+
+}
+.basket1 img{
+    width:20px ;
+    height: 20px;
+    border-radius: 5px;
+    margin-right:10px;
+    back
+    background-image: url('/image/icon-cart.svg');
+    background-repeat: no-repeat;
+}
+
+.addcart{
+    width:140px ;
+    height: 35px;
+    background-color: chartreuse;
+    margin-top: 3px;
+    margin-right: 4px;
+
+}
+
+
+.addcart p{
+    text-align: left;
+    padding-top: -15px;
+    text-align: left;
+
+
+}
+.minus{
+    width:45px;
+    height: 35px;
+    border-radius: 5px;
+    margin-top: 2px;
+    background-color: rgba(128, 128, 128, 0.123);
+}
+
+.minus p{
+    width:45px;
+    height: 35px;
+    margin-top: -15px;
+    font-size: 50px;
+    text-align: center;
+    color:hsl(26, 100%, 55%);
+ 
+ 
+}
+
+.zero{
+    width:45px;
+    height: 35px;
+    border-radius: 5px;
+    margin-top: 2px;
+    background-color: rgba(128, 128, 128, 0.158);
+
+}
+
+.zero p{
+    width:45px;
+    height: 35px;
+    text-align:center;
+    margin: 10px 0px 20px 0px ;
+    font-weight: bold;
+    font-size: 20px
+ 
+}
+
+.plus{
+    width:45px;
+    height: 35px;
+    border-radius: 5px;
+    margin-top: 2px;
+    background-color: rgba(128, 128, 128, 0.158);
+}
+.plus p{
+    width:45px;
+    height: 35px;
+    margin-top: -5px;
+    font-size: 40px;
+    text-align: center;
+    color: orange;
+    font-weight:bolder;
+ 
 
 }
